Update Project Links

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img src="images/archer.png" alt="">
                 <h3>ARCHER</h3>
                 <div class="projectLinks">
-                    <a href="https://gentlekboy.github.io/archer/" target="_blank" rel="noopener noreferrer">VISIT MEDLAB</a>
+                    <a href="https://gentlekboy.github.io/archer/" target="_blank" rel="noopener noreferrer">VISIT ARCHER</a>
                     <a href="https://github1s.com/Gentlekboy/archer" target="_blank" rel="noopener noreferrer">VIEW CODES</a>
                 </div>
                 <P>HTML | CSS | Bootstrap</P>
@@ -77,7 +77,7 @@
                 <img src="images/stopwatch.png" alt="">
                 <h3>STOPWATCH</h3>
                 <div class="projectLinks">
-                    <a href="https://gentlekboy.github.io/stopwatch/" target="_blank" rel="noopener noreferrer">VISIT MEDLAB</a>
+                    <a href="https://gentlekboy.github.io/stopwatch/" target="_blank" rel="noopener noreferrer">VISIT STOPWATCH</a>
                     <a href="https://github1s.com/Gentlekboy/stopwatch" target="_blank" rel="noopener noreferrer">VIEW CODES</a>
                 </div>
                 <P>HTML | CSS | JavaScript</P>
