--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h3>ARCHER</h3>
                 <div class="projectLinks">
                     <a href="https://gentlekboy.github.io/archer/" target="_blank" rel="noopener noreferrer">VISIT ARCHER</a>
-                    <a href="https://github1s.com/Gentlekboy/archer" target="_blank" rel="noopener noreferrer">VIEW CODES</a>
+                    <a href="https://github1s.com/Gentlekboy/Archer" target="_blank" rel="noopener noreferrer">VIEW CODES</a>
                 </div>
                 <P>HTML | CSS | Bootstrap</P>
             </div>
