Updated Link To Stopwatch

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <img src="images/stopwatch.png" alt="">
                 <h3>STOPWATCH</h3>
                 <div class="projectLinks">
-                    <a href="https://gentlekboy.github.io/stopwatch/" target="_blank" rel="noopener noreferrer">VISIT STOPWATCH</a>
+                    <a href="https://gentlekboy.github.io/Stopwatch/" target="_blank" rel="noopener noreferrer">VISIT STOPWATCH</a>
                     <a href="https://github1s.com/Gentlekboy/stopwatch" target="_blank" rel="noopener noreferrer">VIEW CODES</a>
                 </div>
                 <P>HTML | CSS | JavaScript</P>
